a03completa - criação da tela de edição de perfil e edição do perfil

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -10,6 +10,7 @@
 
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
+
   <ion-side-menu side="left">
     <ion-header-bar class="bar bar-positive">
       <h1 class="title">Dados Pessoais</h1>
@@ -23,6 +24,13 @@
           </div>
           <div class="item item-body"></div>
         </div>
+
+        <ion-list>
+          <ion-item menu-close href="#/app/perfil">
+            Perfil
+          </ion-item>
+        </ion-list>
+
       </ion-content>
   </ion-side-menu>
 </ion-side-menus>
